--- a/blocks/intro.css
+++ b/blocks/intro.css
@@ -42,7 +42,7 @@
 @media screen and (max-width: 768px) {
   .intro {
     max-width: 720px;
-    padding-top: 90px;
+    padding: 90px 24px 0;
   }
 
   .intro__title {
@@ -69,7 +69,7 @@
 @media screen and (max-width: 320px) {
   .intro {
     max-width: 288px;
-    padding-top: 64px;
+    padding: 64px 16px 0;
   }
 
   .intro__title {
