--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,20 +1,21 @@
 .footer {
   margin: auto;
-  padding-top: 92px;
-  max-width: 194px;
+  padding-top: 90px;
+  max-width: 15.15%;
   font-size: 14px;
   line-height: 16px;
 }
 
 @media screen and (max-width: 768px) {
   .footer {
-    padding-top: 88px;
+    max-width: 25.26%;
   }
 }
 
 @media screen and (max-width: 320px) {
   .footer {
-    padding-top: 64px;
+    max-width: 60.625%;
     line-height: 14px;
+    padding-top: 65px;
   }
 }
