--- a/blocks/header.css
+++ b/blocks/header.css
@@ -6,20 +6,20 @@
   align-items: center;
 }
 .header__logo {
-  max-width: 254.84px;
+  max-width: 21.24%;
   width: 100%;
 }
 
 @media screen and (max-width: 768px) {
   .header__logo {
-    max-width: 254px;
+    max-width: 33%;
     width: 100%;
   }
 }
 
 @media screen and (max-width: 320px) {
   .header__logo {
-    max-width: 188px;
+    max-width: 58.75%;
     width: 100%;
   }
 }
