--- a/blocks/intro.css
+++ b/blocks/intro.css
@@ -1,5 +1,5 @@
 .intro {
-  max-width: 984px;
+  max-width: 76.875%;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
@@ -10,7 +10,7 @@
   font-family: "Inter-Black";
   font-size: 54px;
   line-height: 58px;
-  max-width: 830px;
+  max-width: 84.35%;
   margin: 0;
   padding-bottom: 40px;
 }
@@ -18,7 +18,7 @@
 .intro__text {
   font-size: 24px;
   line-height: 34px;
-  max-width: 738px;
+  max-width: 75%;
   margin: 0;
   padding-bottom: 10px;
 }
@@ -27,7 +27,7 @@
   font-size: 24px;
   line-height: 34px;
   text-align: right;
-  max-width: 732px;
+  max-width: 74.39%;
   margin: 0;
   padding-bottom: 32px;
 }
@@ -35,18 +35,18 @@
 .intro__paragraph {
   font-size: 16px;
   line-height: 26.08px;
-  max-width: 722px;
+  max-width: 73.37%;
   margin: 0;
 }
 
 @media screen and (max-width: 768px) {
   .intro {
-    max-width: 720px;
+    max-width: 93.75%;
     padding: 90px 24px 0;
   }
 
   .intro__title {
-    max-width: 707px;
+    max-width: 98.19%;
     font-size: 45px;
     line-height: 49px;
     padding-bottom: 50px;
@@ -68,7 +68,7 @@
 
 @media screen and (max-width: 320px) {
   .intro {
-    max-width: 288px;
+    max-width: 90%;
     padding: 64px 16px 0;
   }
 
